add method get by id and get by identification
